navigation bar & header complete

--- a/Home.html
+++ b/Home.html
@@ -7,19 +7,22 @@
           content="finance, setp by step, guidance" />
     <title>revenU</title>
     <link href="css/Layout.css" rel="stylesheet" />
-    <link href="css/Home_styles.css" rel="stylesheet" />
+    <!--<link href="css/Home_styles.css" rel="stylesheet" />-->
 </head>
 
 <body>
 
 <header>
-    <a href="Home.html"><img src="/testLogo.png" /></a>
+    
     <nav>
+        <!--<div style="text-align: left"><img src="/Users/libakenigsberg/Library/CloudStorage/OneDrive-TouroUniversityAcademic/Spring2023/revenU/testLogo.png" width="100" /></div>  --> 
         <ul>
+            <div style="text-align: left"><a href="Home.html"><img src ="/Users/libakenigsberg/Library/CloudStorage/OneDrive-TouroUniversityAcademic/Spring2023/revenU/testLogo.png" width="100" /></a></div>
             <li><a href="AboutUs.html">About Us</a></li>
             <li><a href="CreditScore.html">Credit Score</a></li>
             <li><a href="BankAccount.html">Bank Account</a></li>
             <li><a href="BudgetHotTips.html">Budget Hot Tips</a> </li>
+            <li><a href="PieChart.html">Pie Chart</a></li>
         </ul>
     </nav>
 </header>
