--- a/Budgeting.html
+++ b/Budgeting.html
@@ -7,13 +7,12 @@
           content="finance, setp by step, guidance" />
     <title>revenU</title>
     <link href="css/Layout.css" rel="stylesheet" />
-    <link href="css/Home_styles.css" rel="stylesheet"/>
-
+    <link href="css/Budgeting_styles.css" rel="stylesheet"/>
 </head>
 
 <body>
 <header>
-    
+
     <nav>
         <ul>
             <div style="text-align: left"><a href="Home.html"><img src ="revenU_logo.png" width="100" height="50" /></a></div>
@@ -25,16 +24,34 @@
     </nav>
 </header>
 
-<p><b>revenU</b></p>
-<p2>Our Mission</p2>
-<p3>To empower young people with the tools to build a healthy financial life.</p3>
-<p4>We are committed to giving these young people the knowledge and basics to understand what financial literacy is and become more confident in the opportunities all people should have.</p4>
+
+<h1>Budgeting Tips</h1>
+
+<div class="piechart"></div>
 
 
+<div class="key">
+    <div class="square1">
+        <p1>Needs</p1>
+    </div>
 
-<footer>
-    For more information feel free to <a href = "mailto: info@revenue.com">email us</a>
-</footer>
+    <div class="square2">
+        <p2>Savings</p2>
+    </div>
+    <div class="square3">
+        <p3>Wants</p3>
+    </div>
+
+    <p4>Know where your money goes!</p4>
+    <p5>How much income do you have?</p5>
+    <p6>How much are each of your bills?</p6>
+    <p7>Make sure to budget for savings!</p7>
+    <p8>Set a goal. This is where you think about the future!</p8>
+    <br/><hr/><br/>
+    <p9><b>Beware of bad advice. Do your reasearch to ensure your financial security.</b></p9>
+
+
+</div>
 
 </body>
 </html>
